@@ -40,6 +40,9 @@
     * battery and signal handling has been added to out data display.
     * paho.mqtt version has been added into the logging system.
 
+  * FIXED:
+    * an issue with icons in the place window has been fixed.
+
 
 ### November 6 2021, Release version 0.7.6 ###
 
